Se termino la sesion de inicio

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Enoc Store</title>
 </head>
-
-    
+<body>
+    <h3>Camina comodo y seguro de ti</h3>
+    <nav>
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
+        <a href="index.html">Inicio</a>
+        <a href="portafolio.html">portafolio</a>
+        <a href="contacto.html">Contacto</a></h2>
+    </nav>
+    <h1>ENOC STORE</h1>
+  <h4>Somos una zapateria con envios a nivel nacional</h4>
+  <br>
+  <h1>Misión</h1>
+  <h4>Vender</h4>
+  <br>
+  <h1>Visión</h1>
+  <h4>Seguidores</h4>
 </body>
 </html>
