Subiendo imagenes en el portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -12,11 +12,20 @@
         <a href="contacto.html">Contacto</a></h1>
     </nav>
 <br>
-<br>
-<nav>
-    <img src="Imagenes/Logo 2.0.png" alt=""width="200" height="200"> 
-    <img src="Imagenes/Logo 2.0.png" alt=""width="200" height="200">
-</nav>
+<br><table></table>
+    <img src="Imagenes/1.jpg" alt="Imagen cargando"width="300" height="300"> 
+    <img src="Imagenes/2.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/3.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/4.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/5.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/6.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/7.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/8.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/9.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/10.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/11.jpg" alt="Imagen cargando"width="300" height="300">
+    <img src="Imagenes/12.jpg" alt="Imagen cargando"width="300" height="300">
+
 
 </body>
 </html>
