Se creo el catálogo

--- a/portafolio.html
+++ b/portafolio.html
@@ -11,21 +11,49 @@
         <a href="portafolio.html">portafolio</a>
         <a href="contacto.html">Contacto</a></h1>
     </nav>
-<br>
-<br><table></table>
-    <img src="Imagenes/1.jpg" alt="Imagen cargando"width="300" height="300"> 
-    <img src="Imagenes/2.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/3.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/4.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/5.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/6.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/7.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/8.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/9.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/10.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/11.jpg" alt="Imagen cargando"width="300" height="300">
-    <img src="Imagenes/12.jpg" alt="Imagen cargando"width="300" height="300">
 
+<h1 align="center">CATALOGO</h1>
+<br>
+<br>
+<center>
+<table>
+   <tr> 
+    <th><img src="Imagenes/1.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    <th><img src="Imagenes/2.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    <th><img src="Imagenes/3.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    <th><img src="Imagenes/4.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    </tr>
+    <tr>
+        <td> <h3 align="center">👆175.000👆</h3></td>
+        <td> <h3 align="center">👆185.000👆</h3></td>
+        <td> <h3 align="center">👆180.000👆</h3></td>
+        <td> <h3 align="center">👆175.000👆</h3></td>
+    </tr>
+    <tr>
+        <th><img src="Imagenes/5.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/6.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/7.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/8.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    </tr>
+    <tr>
+        <td> <h3 align="center">👆175.000👆</h3></td>
+        <td> <h3 align="center">👆175.000👆</h3></td>
+        <td> <h3 align="center">👆165.000👆</h3></td>
+        <td> <h3 align="center">👆185.000👆</h3></td>
+    </tr>
+    <tr>
+        <th><img src="Imagenes/9.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/10.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/11.jpg" alt="Imagen cargando"width="300" height="300"></th>
+        <th><img src="Imagenes/12.jpg" alt="Imagen cargando"width="300" height="300"></th>
+    </tr>
+    <tr>
+        <td> <h3 align="center">👆185.000👆</h3></td>
+        <td> <h3 align="center">👆125.000👆</h3></td>
+        <td> <h3 align="center">👆125.000👆</h3></td>
+        <td> <h3 align="center">👆185.000👆</h3></td>
+    </tr>
+</center>
 
 </body>
 </html>
