--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Enoc Store</title>
 </head>
 <body>
-    <h3>Camina comodo y seguro de ti</h3>
+    
+    <h3 align="center">Camina comodo y seguro de ti</h3>
     <nav>
         <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
         <a href="index.html">Inicio</a>
@@ -21,5 +22,6 @@
   <br>
   <h1>Visión</h1>
   <h4>Seguidores</h4>
+
 </body>
 </html>
