TRabajo terminado "ENOC  STORE"

--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,21 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="portafolio.html">portafolio</a>
-        <a href="contacto.html">Contacto</a>
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
+            <center>
+            <a href="index.html">Inicio</a>
+            <a href="portafolio.html">portafolio</a>
+            <a href="contacto.html">Contacto</a></h2>
+            </center>
     </nav>
-    
+    <br><br><br>
+   <H1 align="center"><b><i>LÍNEAS DE CONTACTO</i></b></H1>
+   <H3 align="center">Dale click en la imagen para que te lleve directamente al medio de contacto que presiones</H3>
+   <br><br><br>
+<center>
+<a href="https://www.facebook.com/enocstore9307" target="_blank"><img src="Imagenes/facebook.png" alt="Imagen cargando" height="200" width="200"></a>
+<a href="https://wa.me/message/574CFT7XL2KCG1" target="_blank"><img src="Imagenes/wpp.png" alt="Imagen cargando" height="200" width="200"></a>
+<a href="https://instagram.com/enoc._.store" target="_blank"><img src="Imagenes/ig.png" alt="Imagen cargando" height="200" width="200"></a>
+</center>
 </body>
 </html>
