--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 </head>
 <body>
     
-    <h3 align="center">Camina comodo y seguro de ti</h3>
+    <h3 align="center">Camina cómodo y seguro de ti</h3>
     <nav>
-        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
-        <a href="index.html">Inicio</a>
-        <a href="portafolio.html">portafolio</a>
-        <a href="contacto.html">Contacto</a></h2>
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="300" height="200">
+            <center>
+            <a href="index.html">Inicio</a>
+            <a href="portafolio.html">portafolio</a>
+            <a href="contacto.html">Contacto</a></h2>
+            </center>
     </nav>
-    <h1>ENOC STORE</h1>
-  <h4>Somos una zapateria con envios a nivel nacional</h4>
+    <h1><b><i>ENOC STORE</i></b></h1>
+  <h4>Nacemos en noviembre de 2022 como un emprendimiento, somos una tienda online, enfocada en venta de diferentes tipos de calzado para hombre y mujer, hacemos envíos a las principales ciudades de Colombia y ofrecemos pago contra entrega en la ciudad de Medellín. Nuestro lema es camina cómodo y seguro de ti.</h4>
   <br>
-  <h1>Misión</h1>
-  <h4>Vender</h4>
+  <h1><b><i>MISIÓN</i></b></h1>
+  <h4>Generar un impacto positivo en las compras online de diferentes tipos de calzado, para que sea seguro y cómodo.</h4>
   <br>
-  <h1>Visión</h1>
-  <h4>Seguidores</h4>
+  <h1><B><I>VISIÓN</I></B></h1>
+  <h4>Ser una tienda online reconocida a nivel nacional, por brindar confianza y cercanía a la hora de realizar compras virtuales.</h4>
 
 </body>
 </html>
