--- a/portafolio.html
+++ b/portafolio.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <nav>
-       <h1> <a href="index.html">Inicio</a>
-        <a href="portafolio.html">portafolio</a>
-        <a href="contacto.html">Contacto</a></h1>
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
+            <center>
+            <a href="index.html">Inicio</a>
+            <a href="portafolio.html">portafolio</a>
+            <a href="contacto.html">Contacto</a></h2>
+            </center>
     </nav>
 
-<h1 align="center">CATALOGO</h1>
+<h1 align="center"><b><i>CÁTALOGO</i></b></h1>
 <br>
 <br>
 <center>
@@ -53,6 +56,9 @@
         <td> <h3 align="center">👆125.000👆</h3></td>
         <td> <h3 align="center">👆185.000👆</h3></td>
     </tr>
+</table>
+
+<a href="https://instagram.com/enoc._.store" target="_blank"><button>VER MÁS</button></a>
 </center>
 
 </body>
