--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexión" width="200" height="200">
             <center>
             <a href="index.html">Inicio</a>
             <a href="portafolio.html">portafolio</a>
@@ -15,8 +15,8 @@
             </center>
     </nav>
     <br><br><br>
-   <H1 align="center"><b><i>LÍNEAS DE CONTACTO</i></b></H1>
-   <H3 align="center">Dale click en la imagen para que te lleve directamente al medio de contacto que presiones</H3>
+   <h1 align="center"><b><i>LÍNEAS DE CONTACTO</i></b></h1>
+   <h3 align="center">Dale click en la imagen para que te lleve directamente al medio de contacto que presiones</h3>
    <br><br><br>
 <center>
 <a href="https://www.facebook.com/enocstore9307" target="_blank"><img src="Imagenes/facebook.png" alt="Imagen cargando" height="200" width="200"></a>
