--- a/portafolio.html
+++ b/portafolio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexionS" width="200" height="200">
+        <h2><img src="Imagenes/Logo 2.0.png" alt="Eperando conexión" width="200" height="200">
             <center>
             <a href="index.html">Inicio</a>
             <a href="portafolio.html">portafolio</a>
